clients/cliente2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cliente2-frontend
  namespace: cliente2
spec:
  selector:
    app: cliente2-frontend
  ports:
    - port: 80
      targetPort: 80
