clients/cliente2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cliente2-frontend
  namespace: cliente2
spec:
  ingressClassName: nginx
  rules:
  - host: cliente2-apps-cloud.dnn.lat
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cliente2-frontend
            port:
              number: 80
